--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.1.2",
     "nodemon": "^2.0.20",
+    "redis": "^4.6.7",
     "sequelize": "^6.28.0",
     "sequelize-cli": "^6.6.0"
   }
