docker containers are complete

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,12 @@
 FROM node:18-alpine
-ENV NODE_ENV=production
+
+RUN apk update 
+RUN apk add --update-cache python3 py3-pip
+COPY web_scraper/requirements.txt .
+RUN pip3 install -r requirements.txt
+
 WORKDIR /app/server
+ENV NODE_ENV=production
 COPY package.json .
 RUN npm install
 COPY . .
