--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,9 +1,12 @@
-FROM node:18-alpine
-
-WORKDIR /app/client
+FROM node:18-alpine as builder
+WORKDIR /app
 COPY package.json .
 RUN npm install
 COPY . .
 RUN npm run build
+
+FROM nginx:1.25.2-alpine 
+COPY --from=builder /app/build /usr/share/nginx/html
+COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
 EXPOSE 3000
-CMD ["npm", "start"]
+CMD ["nginx", "-g", "daemon off;"]
